K1J-511: Added fakelogin and some refactoring and cleanup.